--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@ section {
 
 <section>
 <h1>Welcome To SciPred's Domain</h1>
-<h2>A Document for Exploring All of his Works</h2>
-<h3>Includes nearly everything he's been working on.</h3>
+<h2>A Document for Exploring (almost) all of his works.</h2>
 <h3 style="color:blue">Explore all you need to... if you have the time.</h3>
 <h3 style="color:green">Special projects are marked in green text.</h3>
 </section>
