--- a/experimental/RandomBinGen/index.html
+++ b/experimental/RandomBinGen/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>RBG</title>
+<meta charset="UTF-8">
+<meta name="description" content="Some random binary generator I made.">
+<meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- UNDER EXPERIMENTATION OF SCIPRED -->
 <style>
