--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@ function changeDisplay() {
 	if (displayText === 0) {
 		displayText = 1;
 		document.getElementsByTagName('div')[0].innerHTML = `
-			<p style="opacity:1">The Hobo is a trustable friend who keeps on threatening to torture me, although I don't really mind. Whenever he's not trying to destroy me he plays Minecraft Windows 10 Edition, along with some other friends. (Just a bit of a problem: I don't.)</p>
+			<p style="opacity:1">The Hobo is a trustable friend who keeps on threatening to torture me, although I don't really mind. Whenever he's not trying to destroy me he plays Minecraft Windows 10 Edition, along with some other friends. (Just a bit of a problem: I don't. I play JAVA Edition.)</p>
 		`;
 	}
 	else if (displayText === 1) {
 		displayText = 2;
 		document.getElementsByTagName('div')[0].innerHTML = `
-			<p style="opacity:1">The Oshen Man has a bit less mathematical ability than me but is able to think of a pun out of anything (except maybe about himself). Whenever he's not playing Minecraft (and not naming himself Martinkiplier), he gets tortured by the Hobo by an excessive amount.</p>
+			<p style="opacity:1">The Oshen Man has a bit less mathematical ability than me but is able to think of a pun out of anything (except maybe about himself). Whenever he's not playing Minecraft (and not naming himself Martinkiplier), he gets tortured by the Hobo by an excessive amount for a minute or so.</p>
 		`;
 	}
 	else {
