--- a/SCPDCALC/index.html
+++ b/SCPDCALC/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="A calculator unlike any other...">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" href="calc-favicon.ico">
 <style>
 html, body {
 	width: 100%;
