--- a/theProgressPage/index.html
+++ b/theProgressPage/index.html
@@ -6,6 +6,7 @@
 <meta name="description" content="The Progress Page: a place where you can monitor progress.">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" href="prog-favicon.ico">
 <style>
 html, body {width: 100%; margin: 0; font-family: sans-serif; text-align: center;}
 p {font-weight: bold;}
