--- a/experimental/secretproject.html
+++ b/experimental/secretproject.html
@@ -84,13 +84,21 @@ var Nodes = [
 	new Node("wickonfused", "The look on his face suggested that he wasn't the culprit, so it must've been", "SciPred/guilty scipred|Aiden/guilty aiden"),
 	new Node("wicklaugh", "Both she and Wickie exchanged insults for the next 2 hours as SciPred drank all the tea by himself.", ""),
 	new Node("stone join", "So Stone joined the tea party and all was going well, if it wasn't for", "a sudden turn of events/event|the tea turning into a furry/furry tea"),
+	new Node("furry self", "It appeared that the furry was actually her from the parallel universe", "and so she fainted/faint|she wanted her out/kick out"),
+	new Node("furry lucs", "Luckily, it was only a dream: she had been sleeping for a few minutes", "SciPred wanted tea/tea time|Wickie called her lazy/wicklaugh"),
 
 	new Node("fightcontinue", "She kept attacking him until", "he enchanted the rope/rope enchant|he knocked her off her chair/chair knock"),
 	new Node("guilty aiden", "She wanted to attack Aiden but he was right next to SciPred", "she attacked anyway/fight aiden|so she did nothing about it/order ignore"),
 	new Node("event", "They were calmly having tea until", "in came a furry/furry tea|SciPred divided by zero/zero"),
 
 	new Node("chair knock", "She was knocked off the chair and fell head-first to the floor", "Wickie laughed/wicklaugh|SciPred helped her back up because he was impatient for tea/tea time"),
+	new Node("fight aiden", "She attacked Aiden and would've been successful if not for", "SciPred calling his grandma/grandma call|SciPred dividing by zero/zero"),
 	new Node("zero", "A black hole opened and consumed everyone else. SciPred now had all the tea.", ""),
+
+	new Node("tea time", "She tried to get up", "but Aiden deleted her legs/leg delete|but SciPred used her chair as a footrest/footrest"),
+
+	new Node("leg delete", "She decided to just stay on the floor", "but SciPred divided by zero/zero|it was cold but comfortable/floor stay"),
+	new Node("footrest", "She was going to complain about SciPred's disrespect, if not for", "the SciPred Document/document|Wickie laughing/wicklaugh"),
 
 	new Node("indev", "This path is still in development.", "")
 
@@ -102,9 +110,11 @@ tea, aiden
 delete aiden, order ignore, order complaint
 guilty scipred, guilty wickie, sparky study, rope enchant, stone tea, furry tea
 grandma call, no reaction, very guilty wickie, wickonfused, wicklaugh, ballet gift, stone join, furry self, furry lucs
-fightcontinue, guilty aiden, event
+fightcontinue, guilty aiden, event, faint, kick out
 chair knock, fight aiden, zero
 tea time
+leg delete, footrest
+floorstay, document
 */
 function SearchNode(nodename) {
 	for (var i=0; i<Nodes.length; i++) {
