--- a/experimental/secretproject.html
+++ b/experimental/secretproject.html
@@ -99,22 +99,23 @@ var Nodes = [
 
 	new Node("leg delete", "She decided to just stay on the floor", "but SciPred divided by zero/zero|it was cold but comfortable/floor stay"),
 	new Node("footrest", "She was going to complain about SciPred's disrespect, if not for", "the SciPred Document/document|Wickie laughing/wicklaugh"),
+	new Node("faint", "So while she was unconscious the rest of the party drank tea, and SciPred used her cup as a physics demonstration.", ""),
+	new Node("kick out", "The furry was kicked out and all was well, if not for", "her being a furry as well/hypocrisy|SciPred dividing by zero/zero"),
+
+	new Node("floorstay", "Unfortunately the floor", "was lava/lava|was actually a bed/dreaming"),
+	new Node("document", "The document was signed by Wickie, and contained the rule that", "all chairs belong to SciPred/chair own|she should stay on the floor/floorstay"),
+	new Node("hypocrisy", "So she was thrown out of her own party, the last thing she heard from the nerd in the house.", ""),
+
+	new Node("dreaming", "She had been dreaming after all.", ""),
+	new Node("lava", "She was swallowed up by the lava as the rest looked at her with amusement, thinking this was a magic trick.", ""),
 
 	new Node("indev", "This path is still in development.", "")
 
 ];
 /*
 NODE LIST
-beginning
-tea, aiden
-delete aiden, order ignore, order complaint
-guilty scipred, guilty wickie, sparky study, rope enchant, stone tea, furry tea
-grandma call, no reaction, very guilty wickie, wickonfused, wicklaugh, ballet gift, stone join, furry self, furry lucs
-fightcontinue, guilty aiden, event, faint, kick out
-chair knock, fight aiden, zero
-tea time
-leg delete, footrest
-floorstay, document
+floorstay, document, hypocrisy
+dreaming, lava, chair own
 */
 function SearchNode(nodename) {
 	for (var i=0; i<Nodes.length; i++) {
@@ -125,8 +126,12 @@ function SearchNode(nodename) {
 }
 var NoButtonNodes = [
 	"ballet gift",
+	"dreaming",
+	"faint",
 	"grandma call",
+	"hypocrisy",
 	"indev",
+	"lava",
 	"very guilty wickie",
 	"wicklaugh",
 	"zero"
