--- a/experimental/secretproject.html
+++ b/experimental/secretproject.html
@@ -97,7 +97,7 @@ var Nodes = [
 
 	new Node("tea time", "She tried to get up", "but Aiden deleted her legs/leg delete|but SciPred used her chair as a footrest/footrest"),
 
-	new Node("leg delete", "She decided to just stay on the floor", "but SciPred divided by zero/zero|it was cold but comfortable/floor stay"),
+	new Node("leg delete", "She decided to just stay on the floor", "but SciPred divided by zero/zero|it was cold but comfortable/floorstay"),
 	new Node("footrest", "She was going to complain about SciPred's disrespect, if not for", "the SciPred Document/document|Wickie laughing/wicklaugh"),
 	new Node("faint", "So while she was unconscious the rest of the party drank tea, and SciPred used her cup as a physics demonstration.", ""),
 	new Node("kick out", "The furry was kicked out and all was well, if not for", "her being a furry as well/hypocrisy|SciPred dividing by zero/zero"),
@@ -108,6 +108,7 @@ var Nodes = [
 
 	new Node("dreaming", "She had been dreaming after all.", ""),
 	new Node("lava", "She was swallowed up by the lava as the rest looked at her with amusement, thinking this was a magic trick.", ""),
+	new Node("chair own", "As she was lying down on the floor", "she had an idea/floor idea|SciPred accidentally spilled his tea/tea spill"),
 
 	new Node("indev", "This path is still in development.", "")
 
@@ -116,6 +117,7 @@ var Nodes = [
 NODE LIST
 floorstay, document, hypocrisy
 dreaming, lava, chair own
+floor idea, tea spill
 */
 function SearchNode(nodename) {
 	for (var i=0; i<Nodes.length; i++) {
