--- a/experimental/secretproject.html
+++ b/experimental/secretproject.html
@@ -110,14 +110,30 @@ var Nodes = [
 	new Node("lava", "She was swallowed up by the lava as the rest looked at her with amusement, thinking this was a magic trick.", ""),
 	new Node("chair own", "As she was lying down on the floor", "she had an idea/floor idea|SciPred accidentally spilled his tea/tea spill"),
 
+	new Node("floor idea", "The others noticed the look on her face was", "menacing/evil face|surprising/good face"),
+	new Node("tea spill", "The tea, oh so precious and yet wasted so horribly! Fallen on her", "dress/spill dress|face/spill face"),
+
+	new Node("evil face", "It seemed clear to the others that she", "took too many vitamin gummies from SciPred's stash/vitamins|was going to shoot someone/gunshot"),
+	new Node("good face", "SciPred took one look at her and decided she had", "stolen from his vitamin gummy stash/vitamins|in-born analgesia/no pain"),
+	new Node("spill dress", "Her fine black dress was now a brownish downright mess", "she was mad/gunshot|she cried about her perfectly fine dress/dress cry"),
+	new Node("spill face", "The tea", "seemed to scorch her skin/scorch|knocked her out cold/unconsciousness"),
+
+	new Node("vitamins", "As she went crazy she grabbed hold of", "SciPred/victim scipred|Wickie/victim wickie"),
+	new Node("gunshot", "She drew out her two guns and pointed it at SciPred, who", "called his grandma/grandma call|drew out the Ultimate Uno Reverse Card/no u"),
+	new Node("no pain", "So she was taken to the hospital to get her nerves operated on while the rest watched and drank tea.", ""),
+	new Node("dress cry", "As she wept", "Wickie started laughing/wicklaugh|SciPred left as if he didn't care/scipred leave"),
+	new Node("scorch", "After the incident they all had tea, with the added factor that she looked a lot less like herself.", ""),
+	new Node("unconsciousness", "As she lay there everyone else just looked and had tea.", ""),
+
 	new Node("indev", "This path is still in development.", "")
 
 ];
 /*
 NODE LIST
-floorstay, document, hypocrisy
-dreaming, lava, chair own
 floor idea, tea spill
+evil face, good face, spill dress, spill face
+vitamins, gunshot, no pain, dress cry, scorch, unconsciousness
+victim scipred, victim wickie, no u, scipred leave
 */
 function SearchNode(nodename) {
 	for (var i=0; i<Nodes.length; i++) {
@@ -134,6 +150,9 @@ var NoButtonNodes = [
 	"hypocrisy",
 	"indev",
 	"lava",
+	"no pain",
+	"scorch",
+	"unconsciousness",
 	"very guilty wickie",
 	"wicklaugh",
 	"zero"
