--- a/experimental/secretproject.html
+++ b/experimental/secretproject.html
@@ -125,15 +125,16 @@ var Nodes = [
 	new Node("scorch", "After the incident they all had tea, with the added factor that she looked a lot less like herself.", ""),
 	new Node("unconsciousness", "As she lay there everyone else just looked and had tea.", ""),
 
+	new Node("victim scipred", "She saw the look on SciPred's face, who drew out from behind his back pocket", "a detonator/detonator|a burnt waffle/burnt waffle"),
+	new Node("victim wickie", "As she pinned Wickie down, she did not suspect what was to come next", "SciPred revealing a detonator/detonator|Aiden deleting her hands and arms/arm delete"),
+
 	new Node("indev", "This path is still in development.", "")
 
 ];
 /*
 NODE LIST
-floor idea, tea spill
-evil face, good face, spill dress, spill face
-vitamins, gunshot, no pain, dress cry, scorch, unconsciousness
 victim scipred, victim wickie, no u, scipred leave
+detonator, burnt waffle, arm delete
 */
 function SearchNode(nodename) {
 	for (var i=0; i<Nodes.length; i++) {
