--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>SCIPRED'S DOMAIN</title>
 <meta charset="UTF-8">
-<meta name="description" content="SciPred's Domain. Thanks people">
+<meta name="description" content="SciPred's Official Github Website. Special thanks to some people (you know who you are lol)">
 <meta name="author" content="SciPred">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="favicon.ico">
