--- a/index.html
+++ b/index.html
@@ -138,14 +138,13 @@ section {
 	<li><a href="./experimental/achv2/">Achievofile</a></li>
 	<li><a href="./experimental/directions/">Directions</a></li>
 	<li><a href="./experimental/RandomBinGen/">Random Binary Generator</a></li>
-	<li><a href="./experimental/sociablePairFinder/">Sociable Pair Finder</a></li>
 	<li><a href="./experimental/terminal/">Terminal</a></li>
 </ul>
 </aside>
 
 <div onclick="changeDisplay()">
 	<h5 style="color:blue">Tap Me!</h5>
-	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
+	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He watches weird videos for entertainment and does coding for his Discord Bot, ExPrediment. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
 </div>
 
 <script>
@@ -185,7 +184,7 @@ function changeDisplay() {
 	else {
 		displayText = 0;
 		document.getElementsByTagName('div')[0].innerHTML = `
-			<p style="opacity:1">SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He shoots Fortnite for entertainment and watches on YouTube for dividing by zero. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
+			<p style="opacity:1">SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He watches weird videos for entertainment and does coding for his Discord Bot, ExPrediment. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
 		`;
 	}
 }
