--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ section {
 <h4>PC PROJECTS</h4>
 <ul id="pcpros">
 	<li><a href="./SCPDCALC/">SciPred's Calculator</a></li>
+	<li><a href="./stopwatch/" class="specs">Stopwatch</a></li>
 	<li><a href="./stringtool/" class="specs">Stringtool</a></li>
 </ul>
 
@@ -131,12 +132,12 @@ section {
 <ul>
 	<li><a href="./theProgressPage/" class="specs">Progress Page</a></li>
 	<li><a href="./DeathMessages/">Random Death Message Generator</a></li>
+	<li><a href="./ScrollDown/" class="specs">Scroll Down</a></li>
 </ul>
 
 <h4>EXPERIMENTAL</h4>
 <ul>
 	<li><a href="./experimental/achv2/">Achievofile</a></li>
-	<li><a href="./experimental/directions/">Directions</a></li>
 	<li><a href="./experimental/RandomBinGen/">Random Binary Generator</a></li>
 	<li><a href="./experimental/terminal/">Terminal</a></li>
 </ul>
