--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ h1, h2, h3 {
 h1:hover {
 	color: green;
 }
-p, h5 {
+p {
 	opacity: 0;
 	transition: 0.5s;
 }
@@ -44,8 +44,8 @@ ul li a {
 	transition: all 0.3s;
 	cursor: pointer;
 	max-width: 500px;
-	text-decoration: none;
-	color: blue;
+	text-decoration: underline;
+	color: #0000BB;
 }
 ul li a:hover {
 	color: #00F600;
@@ -56,23 +56,12 @@ ul li a:hover {
 ul li a:active {
 	color: white;
 }
-div {
-	color: #00E600;
-	background: #ddd;
-	text-align: center;
-	width: 0;
-	margin: auto;
-	border-radius: 10px;
-	padding: 10px;
-	transition: 0.5s;
-	max-height: 30%;
-	overflow-y: auto;
-}
 section {
 	width: 99.5%;
 	height: 0;
 	border: 1px dashed black;
 	margin: auto;
+	transition: 0.5s;
 }
 #lists {
 	opacity: 0;
@@ -115,49 +104,41 @@ section {
 
 <section>
 <h1>Welcome To SciPred's Domain</h1>
-<h2>A Document for Exploring (almost) all of his works.</h2>
+<h2>A Document for exploring a bunch of stuff he did during his free time.</h2>
 <h3 style="color:blue">Explore all you need to... if you have the time.</h3>
 <h3 style="color:green">Special projects are marked in green text.</h3>
 </section>
 
 <aside id="lists">
 <h4>PC PROJECTS</h4>
+<h5>Projects that cannot be directly accessible for mobile users.</h5>
 <ul id="pcpros">
 	<li><a href="./SCPDCALC/">SciPred's Calculator</a></li>
 	<li><a href="./stopwatch/" class="specs">Stopwatch</a></li>
-	<li><a href="./stringtool/" class="specs">Stringtool</a></li>
+	<li><a href="./stringtool/">Stringtool</a></li>
 </ul>
 
-<h4>MAJOR PROJECTS</h4>
+<h4>MINOR PROJECTS</h4>
+<h5>Projects that can be accessed by both desktop and mobile users.</h5>
 <ul>
-	<li><a href="./theProgressPage/" class="specs">Progress Page</a></li>
-	<li><a href="./DeathMessages/">Random Death Message Generator</a></li>
-	<li><a href="./ScrollDown/" class="specs">Scroll Down</a></li>
+	<li><a href="./theProgressPage/">Progress Page</a></li>
+	<li><a href="./ScrollDown/">Scroll Down</a></li>
 </ul>
 
 <h4>EXPERIMENTAL</h4>
+<h5>Experimental projects that were either unfinished, discarded, or postponed, but are still interesting enough to be included.</h5>
 <ul>
 	<li><a href="./experimental/achv2/">Achievofile</a></li>
 	<li><a href="./experimental/RandomBinGen/">Random Binary Generator</a></li>
 </ul>
 </aside>
 
-<div onclick="changeDisplay()">
-	<h5 style="color:blue">Tap Me!</h5>
-	<p>SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He watches weird videos for entertainment and does coding for his Discord Bot, ExPrediment. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
-</div>
-
 <script>
 function openNav() {
-	document.getElementsByTagName('div')[0].style.width = "80%";
-	document.getElementsByTagName('div')[0].style.background = "black";
-	document.getElementsByTagName('div')[0].style.border = "2px solid black";
 	document.getElementsByTagName('section')[0].style.height = "35%";
 	document.getElementsByTagName('section')[0].style.overflowY = "auto";
 	document.body.style.background = "#eee";
 	setTimeout(function(){
-		document.getElementsByTagName('p')[0].style.opacity = 1;
-		document.getElementsByTagName('h5')[0].style.opacity = 1;
 		document.getElementsByTagName('h1')[0].style.opacity = 1;
 		document.getElementsByTagName('h2')[0].style.opacity = 1;
 		document.getElementsByTagName('h3')[0].style.opacity = 1;
@@ -167,33 +148,11 @@ function openNav() {
 }
 setTimeout(openNav, 600);
 
-var displayText = 0;
-function changeDisplay() {
-	if (displayText === 0) {
-		displayText = 1;
-		document.getElementsByTagName('div')[0].innerHTML = `
-			<p style="opacity:1">The Hobo is a trustable friend who keeps on threatening to torture me, although I don't really mind. Whenever he's not trying to destroy me he plays Minecraft Windows 10 Edition, along with some other friends. (Just a bit of a problem: I don't. I play JAVA Edition.)</p>
-		`;
-	}
-	else if (displayText === 1) {
-		displayText = 2;
-		document.getElementsByTagName('div')[0].innerHTML = `
-			<p style="opacity:1">The Oshen Man has a bit less mathematical ability than me but is able to think of a pun out of anything (except maybe about himself). Whenever he's not playing Minecraft (and not naming himself Martinkiplier), he gets tortured by the Hobo by an excessive amount for a minute or so.</p>
-		`;
-	}
-	else {
-		displayText = 0;
-		document.getElementsByTagName('div')[0].innerHTML = `
-			<p style="opacity:1">SciPred is some random person who likes eating virtual cookies and playing Minecraft (when he's not hacking any game servers). He watches weird videos for entertainment and does coding for his Discord Bot, ExPrediment. Whenever he's not looking at pictures of hobos, he wastes tons of paper trying to find the answer to 0 to the power of 0.</p>
-		`;
-	}
-}
-
 function choose(arr) {return arr[Math.floor(Math.random()*arr.length)];}
 
 if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
 	document.getElementById("pcpros").innerHTML = `
-		<li><p style="color:red">Sorry, you're on mobile. I'm doing my best to prevent errors happening on your device. (If you really want to see the documents that badly, then you could... if you were smart enough.)</p></li>
+		<li><p style="color:red">Sorry, you're on mobile. I'm doing my best to prevent errors happening on your device. (If you really want to see the documents that badly, then you could... if you were smart enough, and your settings compatible enough.)</p></li>
 	`;
 }
 </script>
