--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ function choose(arr) {return arr[Math.floor(Math.random()*arr.length)];}
 
 if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
 	document.getElementById("pcpros").innerHTML = `
-		<li><p style="color:red">Sorry, you're on mobile. I'm doing my best to prevent errors happening on your device. (If you really want to see the documents that badly, then you could... if you were smart enough, and your settings compatible enough.)</p></li>
+		<li style="color:red">Sorry, you're on mobile. I'm doing my best to prevent errors happening on your device. (If you really want to see the documents that badly, then you could... if you were smart enough, and your settings compatible enough.)</li>
 	`;
 }
 </script>
