--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ section {
 <ul>
 	<li><a href="./theProgressPage/">Progress Page</a></li>
 	<li><a href="./ScrollDown/">Scroll Down</a></li>
+	<li><a href="./textconverter/">Text Converter</a></li>
 </ul>
 
 <h4>EXPERIMENTAL</h4>
